2007-02-20 Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs: Don't use the file service for file moves, it might
	have side effects.
	* MSBuildFileFormat.cs: Likwise.
	* VS2003ProjectFileFormat.cs: Add copyright notice.
	* VS2003SlnFileFormat.cs: Likwise.

2007-02-20  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs: Project type guids are per-project type, support
	that.
	(WriteProjects): Add a 'monitor' param.

2007-02-19  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (WriteFile): Use File.Delete for deleting temporary
	files.
	* MSBuildFileFormat.cs (WriteFile): Likewise.
	(CanReadFile): Use XmlReader.MoveToContent to get to the content nodes.
	(LoadProject): Skip non-element (eg. comment) nodes when looking for
	root.
	* VS2003ProjectFileFormat.cs (CanReadFile): Use XmlReader.MoveToContent to 
	get to the content nodes.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.mdp: Updated.

2007-02-13 Ankit Jain  <jankit@novell.com>

	* VS2003SlnFileFormat.cs: New.
	* VS2003ProjectFileFormat.cs: New.
	* MSBuildProject.cs (GetDefaultResourceIdInternal): Make static.
	* MsPrjHelper.cs (CreatePrjxFromCsproj): Add new overload.
	(MsSlnToCmbxHelper): Likewise.
	Set DefaultNamespace. Set resource id.
	* MSBuildSolution.cs (HandleAddEntry): Handle adding vs2003 sln/project.	
	(ConvertToMSBuild): Make internal.
	(UpdateProjectReferences): Likewise.
	* prj2make-sharp-lib.addin.xml: Remove references to importing VS2003 project.
	Add new file formats.
	* SlnFileFormat.cs: Add null check.
	* MSBuildFileFormat.cs (CanReadFile): Check root element of the *proj file.
	Make condition regex static.
	* prj2make-sharp-lib.mdp, Makefile.am: Sync mdp project with makefile.

2007-02-12 Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs: Make regex objects static.

2007-02-12  Ankit Jain  <jankit@novell.com>
