@@ -1,3 +1,7 @@
+2007-02-20  Ankit Jain  <jankit@novell.com>
+
+	* SlnFileFormat.cs: Avoid creating unnecessary guids.
+
 2007-02-20 Ankit Jain  <jankit@novell.com>
 
 	* SlnFileFormat.cs: Don't use the file service for file moves, it might
